# MCP-Tool-Demo

./: .gitignore  pyproject.toml  readme.md
Agent/: __init__.py  agent_factory.py
Client/: __init__.py  mcp_connectors.py
Custom/: __init__.py  add_password_server.py  password_server.py
Demo/: demo.html  run_demo.py  websocket_server.py
LLM/: __init__.py  gemini_service.py
Test/: example.py  password_example.py
Test/Example/: instructions.txt
Test/Tools/: agent_demo.py  math_tools.py  parser.py
dependencies/: mcpconductor-0.1.0-py3-none-any.whl
